package com.buiguesortola.cryptotracker.domain

const val TOP_TEN_FILTER: Byte = 0
const val WORST_TEN_FILTER: Byte = 1

// Testing
const val EMPTY_SCREEN_TAG = "empty_screen"
const val EMPTY_SCREEN_BTN_TAG = "empty_screen_btn"
const val LOADING_TAG = "loading"
const val COINS_LIST_ELEM_TAG = "coins_list_elem"
const val FILTER_TOP_TAG = "filter_top"
const val FILTER_WORST_TAG = "filter_worst"